apep_0442/v2/REPLICATION.md
# Replication Package: apep_0442

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `balance_results.rds`
- `border_results.rds`
- `census_1910_veterans.rds`
- `confed_veterans.rds`
- `did_results.rds`
- `did_subgroup_results.rds`
- `main_results.rds`
- `ri_results.rds`
- `robust_results.rds`
- `secondary_results.rds`
- `spillover_results.rds`
- `spillover_table.rds`
- `subgroup_results.rds`
- `union_veterans.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.py`
- `02_clean_data.R`
- `03_main_analysis.R`
- `03b_diff_in_disc.R`
- `04_robustness.R`
- `04b_rand_inference.R`
- `04c_subgroups.R`
- `04d_border_states.R`
- `04e_spillovers.R`
- `05_figures.R`
- `06_tables.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
